<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_home"
    app:startDestination="@id/bookListFragment">

    <fragment
        android:id="@+id/bookListFragment"
        android:name="ua.yahniukov.bookify.presentation.home.listBook.BookListFragment"
        android:label="@string/text_books"
        tools:layout="@layout/fragment_book_list">
        <action
            android:id="@+id/action_bookListFragment_to_bookFragment"
            app:destination="@id/bookFragment" />
    </fragment>
    <fragment
        android:id="@+id/addFragment"
        android:name="ua.yahniukov.bookify.presentation.home.add.AddFragment"
        android:label="@string/text_add"
        tools:layout="@layout/fragment_add" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="ua.yahniukov.bookify.presentation.home.profile.ProfileFragment"
        android:label="@string/text_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_bottomSheetDialogSettingsFragment"
            app:destination="@id/bottomSheetDialogSettingsFragment" />
    </fragment>
    <dialog
        android:id="@+id/bottomSheetDialogSettingsFragment"
        android:name="ua.yahniukov.bookify.presentation.home.settings.SettingsBottomSheetDialogFragment"
        android:label="fragment_bottom_sheet_dialog_settings"
        tools:layout="@layout/fragment_settings_bottom_sheet_dialog">
        <action
            android:id="@+id/action_bottomSheetDialogSettingsFragment_to_profileFragment"
            app:destination="@id/profileFragment"
            app:popUpTo="@id/profileFragment"
            app:popUpToInclusive="true" />
    </dialog>
    <fragment
        android:id="@+id/bookFragment"
        android:name="ua.yahniukov.bookify.presentation.home.book.BookFragment"
        android:label="fragment_book"
        tools:layout="@layout/fragment_book">
        <action
            android:id="@+id/action_bookFragment_to_bookListFragment"
            app:destination="@id/bookListFragment"
            app:popUpTo="@id/bookListFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="book"
            app:argType="ua.yahniukov.bookify.data.models.entities.Book" />
    </fragment>
</navigation>